crates/macros/tests/debug_job/fail/not_a_function.rs
use blueprint_macros::debug_job;

#[debug_job]
struct A;

fn main() {}
